Revert komet/application grpc plugin changes